Readme
Little explanation of how to setup script